--- a/Hugging_Face_Sentiment_Analysis.ipynb
+++ b/Hugging_Face_Sentiment_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2xR5BGIKnxp+96U2tu0Ae",
+      "authorship_tag": "ABX9TyOEOw2MKh4b6IzlsCgaOdOp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1703,6 +1703,41 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hjQ9p7oIFHY2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classifier(\"journey was too bad\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XsZdaO3wFHfn",
+        "outputId": "a31b7d0a-1d3e-4076-9825-68932cd33a02"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'label': 'NEGATIVE', 'score': 0.9996888637542725}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     }
