--- a/Hugging_Face_Sentiment_Analysis.ipynb
+++ b/Hugging_Face_Sentiment_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEOw2MKh4b6IzlsCgaOdOp",
+      "authorship_tag": "ABX9TyMEZoNbrHaHOByrJDsn/boc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1738,6 +1738,36 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classifier([\n",
+        "    \"journey was too bad\",\n",
+        "    \"this is a great movie\"\n",
+        "])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eiBFOpx5FeVU",
+        "outputId": "879d778a-71c5-4d2e-9cb7-4f5c9f5627ed"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'label': 'NEGATIVE', 'score': 0.9996888637542725},\n",
+              " {'label': 'POSITIVE', 'score': 0.9998798370361328}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     }
